<resources>
    <string name="app_name">Dyscours</string>
    <string name="fillerString">exciting filler</string>
    <string name="productiveString">How productive was your discussion?</string>
    <string name="poorString">Poor</string>
    <string name="amazingString">Amazing</string>
    <string name="browseString">Submit and Back to Home</string>
    <string name="homeString">Submit and Start a conversation</string>
    <string name="topicPromptString">Debate topic</string>
    <string name="opinionPromptString">Opinion</string>
    <string name="ratingString">Rating </string>
    <string name="infoTitleString">Debate Information:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toolbarDebateString">Debate Chat</string>
    <string name="leaveString">Leave</string>
    <string name="participantOpinionString">What is your opinion on this matter?</string>
    <string name="joinString">Join Chat</string>
    <string name="messageString">Type message here...</string>
    <string name="addDebateDialogTimeLimitString">Time Limit</string>
    <string name="addDebateDialogTimeLimitEditTextDefaultString">5:00</string>
</resources>
