<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productiveString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:max="150"
        android:progress="10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/seekBar"
        android:layout_marginTop="300dp"
        android:text="@string/poorString"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/seekBar"
        android:layout_marginTop="300dp"
        android:text="@string/amazingString"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorAccent"
            android:text="@string/homeString"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/startButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimary"
            android:text="@string/browseString"
            android:textColor="#FFFFFF"
            android:onClick="onHomeClick"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>