<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:padding="@dimen/generalPadding">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoTitleString"
        android:textStyle="bold"
        android:textSize="@dimen/mediumText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/infoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fillerString"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textSide1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fillerString"
                app:layout_constraintTop_toBottomOf="@+id/infoText"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/textSide2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fillerString"
                app:layout_constraintTop_toBottomOf="@+id/textSide1"
                android:layout_marginTop="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/leaveString"
        android:textColor="@color/colorRed"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>