<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:padding="@dimen/generalPadding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/oppositionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/fillerString"/>

        <TextView
            android:id="@+id/opinionPromptText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/oppositionText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="50dp"
            android:text="@string/participantOpinionString"
            />
        <EditText
            android:id="@+id/participantOpinionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/opinionPromptText"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="Your opinion:"/>

        <TextView
            android:id="@+id/timeLimitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/participantOpinionEditText"
            android:layout_marginTop="30dp"
            android:text="@string/fillerString" />

        <Button
            android:id="@+id/buttonJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeLimitText"
            android:layout_marginTop="30dp"
            android:text="@string/joinString"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>